--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,6 @@
 <!-- src/main/resources/templates/index.html -->
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang = "en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
   <title>Study Groups</title>
@@ -15,7 +15,7 @@
     <p>Max Members: <span th:text="${group.maxMembers}"></span></p>
   </li>
 </ul>
-<a href="/api/study-groups/create">create studygroup</a>
+<a href="/study-groups/create">create studygroup</a>
 
 </body>
 </html>
