--- a/src/main/resources/templates/create_form.html
+++ b/src/main/resources/templates/create_form.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,18 +7,54 @@
 </head>
 <body>
 <h2>Create Study Group</h2>
-<form action="/study-groups/create" method="post">
-  <label for="groupName">Group Name:</label><br>
-  <input type="text" id="groupName" name="groupName"><br><br>
+<form th:action="@{/study-groups/create}" method="post">
+  <label for="st_key">Key:</label><br>
+  <input type="text" id="st_key" name="st_key"><br><br>
 
-  <label for="subject">Subject:</label><br>
-  <input type="text" id="subject" name="subject"><br><br>
+  <label for="st_title">Title:</label><br>
+  <input type="text" id="st_title" name="st_title"><br><br>
 
-  <label for="location">Location:</label><br>
-  <input type="text" id="location" name="location"><br><br>
+  <label for="st_num">Mode:</label><br>
+  <input type="text" id="st_num" name="st_num"><br><br>
 
-  <label for="maxMembers">Max Members:</label><br>
-  <input type="number" id="maxMembers" name="maxMembers"><br><br>
+  <label for="st_startDate">startDate:</label><br>
+  <input type="text" id="st_startDate" name="st_startDate"><br><br>
+
+  <label for="st_endDate">Title:</label><br>
+  <input type="text" id="st_endDate" name="st_endDate"><br><br>
+
+  <label for="st_onoff">Mode:</label><br>
+  <input type="text" id="st_onoff" name="st_onoff"><br><br>
+
+  <label for="st_date">date:</label><br>
+  <input type="text" id="st_date" name="st_date"><br><br>
+
+  <label for="st_goal">goal:</label><br>
+  <input type="text" id="st_goal" name="st_goal"><br><br>
+
+  <label for="st_rules">rules:</label><br>
+  <input type="text" id="st_rules" name="st_rules"><br><br>
+
+  <label for="st_createDate">createDate:</label><br>
+  <input type="text" id="st_createDate" name="st_createDate"><br><br>
+
+  <label for="st_click">click:</label><br>
+  <input type="text" id="st_click" name="st_click"><br><br>
+
+  <label for="rc_start">rc_start:</label><br>
+  <input type="text" id="rc_start" name="rc_start"><br><br>
+
+  <label for="rc_end">rc_end:</label><br>
+  <input type="text" id="rc_end" name="rc_end"><br><br>
+
+  <label for="st_quest">quest:</label><br>
+  <input type="text" id="st_quest" name="st_quest"><br><br>
+
+  <label for="st_tend">tend:</label><br>
+  <input type="text" id="st_tend" name="st_tend"><br><br>
+
+  <label for="st_category">category:</label><br>
+  <input type="text" id="st_category" name="st_category"><br><br>
 
   <input type="submit" value="Create">
 </form>
