--- a/src/main/resources/templates/create_form.html
+++ b/src/main/resources/templates/create_form.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h2>Create Study Group</h2>
-<form th:action="@{/study-groups/create}" method="post">
+<form th:action="@{/study-groups/create}" method="POST">
   <label for="st_key">Key:</label><br>
   <input type="text" id="st_key" name="st_key"><br><br>
 
